# app/extension_attributes/models/__init__.py
@@ -1,3 +1,0 @@
-from app.extension_attributes.models.attribute import ExtensionAttribute
-
-__all__ = ["ExtensionAttribute"]
